src/test/testcases/invalid/semanticErr/function/wrongParams1.wacc
# Calling a predefined function with parameters of wrong type

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

import WACCmath


begin
  int result = call factorial("This is definitely not right")
end
